; ModuleID = '/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-mmio-v3.c_vgic_v3_init_dist_iodev.c'
source_filename = "/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-mmio-v3.c_vgic_v3_init_dist_iodev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vgic_io_device = type { i32, i32, i32 }

@vgic_v3_dist_registers = common dso_local global i32 0, align 4
@kvm_io_gic_ops = common dso_local global i32 0, align 4
@SZ_64K = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vgic_v3_init_dist_iodev(%struct.vgic_io_device* %0) #0 {
  %2 = alloca %struct.vgic_io_device*, align 8
  store %struct.vgic_io_device* %0, %struct.vgic_io_device** %2, align 8
  %3 = load i32, i32* @vgic_v3_dist_registers, align 4
  %4 = load %struct.vgic_io_device*, %struct.vgic_io_device** %2, align 8
  %5 = getelementptr inbounds %struct.vgic_io_device, %struct.vgic_io_device* %4, i32 0, i32 2
  store i32 %3, i32* %5, align 4
  %6 = load i32, i32* @vgic_v3_dist_registers, align 4
  %7 = call i32 @ARRAY_SIZE(i32 %6)
  %8 = load %struct.vgic_io_device*, %struct.vgic_io_device** %2, align 8
  %9 = getelementptr inbounds %struct.vgic_io_device, %struct.vgic_io_device* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.vgic_io_device*, %struct.vgic_io_device** %2, align 8
  %11 = getelementptr inbounds %struct.vgic_io_device, %struct.vgic_io_device* %10, i32 0, i32 0
  %12 = call i32 @kvm_iodevice_init(i32* %11, i32* @kvm_io_gic_ops)
  %13 = load i32, i32* @SZ_64K, align 4
  ret i32 %13
}

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @kvm_iodevice_init(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
